Add leader test